# home_practice

./: .pre-commit-config.yaml  pyproject.toml
